# star_query_rail

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELETE_ME.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 0ffb68bcb0f0_update_the_model.py  2a95fc35f847_added_book_table.py  339d9bf7a72e_update_the_model.py  95b9f6ba2def_add_is_superuser_in_table_email.py  d112552521b8_update_the_model.py
docker/: README.md
star_query_rail/: __init__.py  __main__.py  example.py  main.py  run.py
star_query_rail/api/: __init__.py  dep.py
star_query_rail/api/router/: account.py  example.py  login.py  user.py
star_query_rail/core/: config.py  security.py
star_query_rail/dependence/: __main__.py  crud.py  models.py
star_query_rail/utils/: parse.py  simnet_test.py
tests/test_example/: test_hello.py
