[project]
name = "star-query-rail"
version = "0.1.0"
description = "A tool for query some infomation about a game"
authors = [
    { name = "OPaimon", email = "paimoe@bupt.edu.cn" }
]
dependencies = [
    "rich>=13.7.1",
    "typer>=0.12.3",
    "arko-wrapper>=0.2.8",
    "aiohttp>=3.9.5",
    "fastapi>=0.111.0",
    "simnet @ git+https://github.com/PaiGramTeam/SIMNet",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
star-query-rail = 'star_query_rail.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.6",
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "rich>=13.7.1",
    "bandit>=1.7.8",
    "pre-commit>=3.7.1",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "coverage>=7.5.3",
    "coverage-badge>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["star_query_rail"]

[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 88

# https://beta.ruff.rs/docs/rules/
lint.select = ["E", "W", "F", "I"]
lint.extend-select = ["I"]
lint.ignore = ["F401"]

# Exclude a variety of commonly ignored directories.
respect-gitignore = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "star_query_rail"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
